# RL-Studio

./: .disable-pre-commit-config.yaml  .gitignore  CHANGELOG.md  CODING.md  CODING_STYLE.md  CONTRIBUTING.md  README.md  RLStudio (copy).py  RLStudio.py  _config.yml  coding_style.md  doubts_glossary.md  dqn-params.yml  liveplot.py  pyproject.toml  qlearning-params.yml  requirements.txt  settings.py  setup.py  test_tensorflow.py  utils.py
.github/: .pre-commit-config.yaml  dependanbot.yml
_data/: navigation.yml
_pages/: about.md  contribute.md  documentation.md  home.md  install.md  logbook.md
_posts/: 2022-03-08-RLStudio_mountain_car.md  2022-03-08-RLStudio_robotmesh.md  2022-05-01-RLStudio_inference.md  2022-10-13-RLStudio_speedupinference.md
_site/: 404.html  feed.xml  index.html  robots.txt  sitemap.xml
_site/about/: index.html
_site/install/: index.html
_site/logbook/: index.html
agents/f1/: __init__.py  manual_pilot.py  qlearn.py  ros_gazebo_pose.py  settings.py  settings_old.py  train_qlearn.py  train_qlearn_old.py  utils.py  utils_old.py
algorithms/Tabulars/: __init__.py  qlearn.py  test_qlearning.py  train_qlearning (copy).py  train_qlearning.py  train_qlearning_f1 (another copy).py  (+1 more)
gym_gazebo/: __init__.py
rl_studio/: ._rl-studio-tuning-qlearn-followlane.py  ._rl-studio.py  README.md  RLStudio.py  __init__.py  config.yaml  config_cartpole.yaml  config_mountain_car.yaml  config_robot_mesh.yaml  inference_rlstudio.py  main_rlstudio.py  qlearn.yml  requirements.txt  rl-studio-tuning-qlearn-followlane.py  rl-studio.py
(+1255 files in other folders)
